demo.html/w3c project/index.html

--- a/demo2.html/index.html
+++ b/demo2.html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Html Basics</title>
     <style>
            table,th,td
             {
@@ -84,9 +84,7 @@
 </tr>
     <tr>
         <td colspan="3">row 3 cell 1</td>
-    </tr>
+</tr>
 </table>
-
-
 </body>
 </html>
