--- a/Basic.css/Portfolio.css/index.html
+++ b/Basic.css/Portfolio.css/index.html
@@ -10,10 +10,48 @@
     <h1>A.P.J Abdul Kalam</h1>
     <h2>The Missle Man Of India</h2>
     <div class="image"><img src="https://rekhta.pc.cdn.bitgravity.com/Images/Shayar/Round/a-p-j-abdul-kalam.png" alt="image" height="250" width="250"></div>
-    <div><a href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam"><button id="btn1">Wikipedia</button></a>
+    <div class="div1"><a href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam"><button id="btn1">Wikipedia</button></a>
     <a href="www.google.co.in"><button id="btn2">Search</button></a> 
     </div>
-    <div class="div1"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus commodi ad error cumque? Quaerat ullam quos dolores eius atque qui quae repellendus, dolore eos quibusdam, esse quia maxime, ducimus aut suscipit! A quasi rem illo officia, nostrum velit earum quibusdam id ipsa voluptatibus asperiores nulla suscipit sed modi? Temporibus dolorum reprehenderit provident corrupti officiis quidem cumque minima voluptate nobis. Cupiditate mollitia quidem accusantium placeat ratione, id veniam, dolores fuga doloremque provident quae nulla culpa soluta alias rem, commodi temporibus nostrum consequatur dolorum. Non adipisci voluptas expedita iure quas similique eum porro facilis optio voluptates eligendi repellendus corporis ducimus animi velit, culpa exercitationem! Mollitia, incidunt eaque commodi dicta quos modi tempore excepturi temporibus eum alias et id, ex, eligendi eveniet accusantium quidem? Odit officiis laudantium facere error dolores voluptas ad quibusdam recusandae officia, necessitatibus ab possimus voluptatem sed quo quidem optio reprehenderit, molestiae eum tenetur exercitationem dicta? Fuga ullam itaque reiciendis?</p></div>
-    <article><img src="https://cdn.britannica.com/48/222648-050-F4D0A2D8/President-of-India-A-P-J-Abdul-Kalam-2007.jpg" alt="" height="250" width="250"></article>
+    <div class="div1"><p>A.P.J. Abdul Kalam (born October 15, 1931, Rameswaram, India—died July 27, 2015, Shillong) Indian scientist and politician who played a leading role in the development of India’s missile and nuclear weapons programs. He was president of India from 2002 to 2007.
+
+        Kalam earned a degree in aeronautical engineering from the Madras Institute of Technology and in 1958 joined the Defence Research and Development Organisation (DRDO). In 1969 he moved to the Indian Space Research Organisation, where he was project director of the SLV-III, the first satellite launch vehicle that was both designed and produced in India. Rejoining DRDO in 1982, Kalam planned the program that produced a number of successful missiles, which helped earn him the nickname “Missile Man.” Among those successes was Agni, India’s first intermediate-range ballistic missile, which incorporated aspects of the SLV-III and was launched in 1989.</p></div>
+    <article class="image2"><img src="https://i.pinimg.com/originals/9c/13/0f/9c130f4a650c7f7c799a898d101c474c.jpg" alt="" height="250" width="250"></article>
+<div><p>From 1992 to 1997 Kalam was scientific adviser to the defense minister, and he later served as principal scientific adviser (1999–2001) to the government with the rank of cabinet minister. His prominent role in the country’s 1998 nuclear weapons tests solidified India as a nuclear power and established Kalam as a national hero, although the tests caused great concern in the international community. In 1998 Kalam put forward a countrywide plan called Technology Vision 2020, which he described as a road map for transforming India from a less-developed to a developed society in 20 years. The plan called for, among other measures, increasing agricultural productivity, emphasizing technology as a vehicle for economic growth, and widening access to health care and education.In 2002 India’s ruling National Democratic Alliance (NDA) put forward Kalam to succeed outgoing President Kocheril Raman Narayanan. Kalam was nominated by the Hindu nationalist (Hindutva) NDA even though he was Muslim, and his stature and popular appeal were such that even the main opposition party, the Indian National Congress, also proposed his candidacy. Kalam easily won the election and was sworn in as India’s 11th president, a largely ceremonial post, in July 2002. He left office at the end of his term in 2007 and was succeeded by Pratibha Patil, the country’s first woman president.
+
+    Upon returning to civilian life, Kalam remained committed to using science and technology to transform India into a developed country and served as a lecturer at several universities. On July 27, 2015, he collapsed while delivering a lecture at the Indian Institute of Management Shillong and was pronounced dead from cardiac arrest soon afterward.
+    
+    Kalam wrote several books, including an autobiography, Wings of Fire (1999). Among his numerous awards were two of the country’s highest honours, the Padma Vibhushan (1990) and the Bharat Ratna (1997).</p></div>
+<div class="image3"><img src="https://rukminim2.flixcart.com/image/850/1000/xif0q/poster/f/6/m/small-honourable-dr-apj-abdul-kalam-19-apj-aa-creation-original-imagqebm3rh8acyz.jpeg?q=90&crop=false" alt="" height="300px" width="300px"></div>
+<div class="p3"><p>Bharat Ratna, the highest civilian award in India. Bharat translates to “India” and ratna to “gem” or “jewel.” Instituted by the government in 1954, the Bharat Ratna is given in recognition of “exceptional service” or “performance of the highest order” in “any field of human endeavour.” Although the Bharat Ratna is limited to a maximum of three awards per year, in 1999 the government deferred that restriction and awarded the Bharat Ratna to four people. The Bharat Ratna awards were temporarily suspended between mid-1977 and early 1980 and then between mid-1992 and 1995, following changes in the federal government and some lawsuits, respectively.
+
+    The award is not limited to Indian citizens: in 1987 and 1990, respectively, Pashtun leader Abdul Ghaffar Khan and Nelson Mandela , the first Black president of South Africa, received the award. Other recipients include activists who led India’s freedom struggle and worked for social causes, notable musicians who brought India to the world stage, an athlete who is considered an all-time great, and individuals who helped the country progress in the fields of science, medicine, and engineering. Recommendations for the award are made by the prime minister to the president of the country. Bharat Ratna recipients are awarded a medallion and a certificate (sanad) signed by the president of India. The recipients of the Bharat Ratna award since its inception are provided in the table.He stood out as a distinguished scientist and engineer, assuming the role of the 11th President of the nation from 2002 to 2007.</p></div>
+<p>The complete name of APJ Abdul Kalam was Dr. Avul Pakir Jainulabdeen Abdul Kalam. He shone as a bright star in Indian history, known as both the Missile Man and People’s President. He was born on 15th October 1931, in Tamil Nadu. His life was characterized by challenges but served as an inspiration to the emerging generation of India. 
+
+    He envisioned a developed India and famously said, “You have to dream before your dreams can come true.” His strong passion for flight allowed him to achieve his dream of becoming an Aeronautical Engineer. Despite coming from a humble background, he persevered in his education, completing his Science degree at St. Joseph’s College in Tiruchirappalli and Aeronautical Engineering from the Madras Institute of Technology in 1954.
+    
+    In 1958, he joined DRDO as a senior scientific assistant, leading a small team focused on developing a prototype hovercraft. Later, he moved to the Indian Space Research Organization (ISRO) due to limited progress in the hovercraft program. Widely acclaimed as the “Missile Man of India,” he made substantial contributions to developing ballistic missiles and space rocket technology. He served as a driving force in advancing the nation’s defence technologies, ultimately elevating India to the status of nuclear power through his remarkable achievements.</p>
+<footer>
+    <form action="./index.html" method="get">
+        <fieldset><legend>Login Form</legend>
+        <input type="text" id="fnam" placeholder="Enter Your First Name" name="fnam"><br><br>
+        <input type="text" id="lnam" placeholder="Enter Your Last Name" name="lnam"><br><br>
+        <input type="email" id="email" placeholder="Enter Your E-mail" name="email"><br><br>
+        <input type="password" id="password" placeholder="Enter Your Password" name="password"><br><br>
+        <button>Sign-in</button>
+        <button>Sign-up</button>
+        </fieldset>
+    </form>
+</footer>
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
