--- a/Table.css/forms.html
+++ b/Table.css/forms.html
@@ -11,7 +11,7 @@
         }
     </style>
 </head>
-<form action="file.php" method="get">
+<form action="./file.php" method="get">
 <body>
     <h1>My Form</h1>
  <label for="fnam">First Name:</label>   <input type="text" id="fnam" placeholder="Enter your first name" name="fnam"><br><br>
